compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__expressions_parser_tests__boolean_expression_ast_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Or,
    left: BinaryExpression {
        operator: And,
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "a",
                },
            ),
            base: None,
        },
        right: UnaryExpression {
            operator: Not,
            value: ReferenceExpr {
                kind: Member(
                    Identifier {
                        name: "b",
                    },
                ),
                base: None,
            },
        },
    },
    right: BinaryExpression {
        operator: Xor,
        left: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "c",
                },
            ),
            base: None,
        },
        right: ReferenceExpr {
            kind: Member(
                Identifier {
                    name: "d",
                },
            ),
            base: None,
        },
    },
}
